--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_main">Capacitor Test</string>
     <string name="package_name">io.phloxcorp.eldo.qa2</string>
     <string name="custom_url_scheme">io.phloxcorp.eldo.qa2</string>
+    <string name="server_client_id">450429795824-6ms86sk1kispv9hn8jf53t3lf4ij2sk9.apps.googleusercontent.com</string>
 </resources>
